k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: travel-planner
  labels:
    name: travel-planner
